[package]
name = "hyperanonflow"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.21.0"
reqwest = { version = "0.11", features = ["json"] }
winterfell = "0.5"
